@startuml
!include ..\ChargeCommon.puml
package Charge{
    package CustodyCharge{
        class CustodyRemittance{
            name: string
            created_at: datetime
            payment_date: datetime
            concept: string
        }
        class CustodyReceipt {
            amount: float
        }
    }

    CustodyReceipt --> Receipt
    CustodyRemittance --> Remittance

    CustodyReceipt *-- State
    CustodyRemittance *-- "1..N" CustodyReceipt
}

package Custody{
    class CustodyEdition
    class CustodyRegistration
}
CustodyRemittance o-- "1..N" CustodyEdition
CustodyReceipt o-- CustodyRegistration
CustodyEdition --o CustodyRegistration
@enduml
